# template-python

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: wf-ci-containerapp-prod.yaml
src/snek_case/: __init__.py  main.py  py.typed
src/snek_case/config/: config.json
src/snek_case/config/schema/: config.schema.json
src/snek_case/core/: __init__.py  configuration_provider.py  json_configuration_provider.py
src/snek_case/sneks/: __init__.py  cool_snek.py  normal_snek.py  snek.py
terraform/configurations/container_app/: main.tf  variables.tf
tests/core/: test_configuration_provider.py
tests/sneks/: test_snek.py
