[project]
name = "snek_case"
version = "0.1.0"
description = ""
authors = [{ name = "armckinney" }]
requires-python = "==3.12.3"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.9",
    "ty==0.0.29",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "snek_case"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/data/"
junit_family = "xunit2"
